fix: adjust spacing in narratives

--- a/src/assets/styles/all.css
+++ b/src/assets/styles/all.css
@@ -650,7 +650,7 @@ ul.frameworks li > div > * + * {
     font-weight: var(--fi-font-weight-semibold);
     line-height: 1.2;
     max-width: 22.5rem;
-    padding: var(--fi-space-l);
+    padding: var(--fi-space-s);
 }
 
 .card h5 {
